@@ -55,3 +55,8 @@ Alon
 ----
 Alon
 1) In case the user enabled bottom line in category page then disable his native reviews rating.
+
+2013-06-27
+----
+Alon
+1) Small change in terms of use sentence and use word press function to ease things.
